Fix: status dropdown on small screens

--- a/webapp/channels/src/components/custom_status/custom_status.scss
+++ b/webapp/channels/src/components/custom_status/custom_status.scss
@@ -256,3 +256,9 @@ span.emoticon[style]:hover {
         }
     }
 }
+
+.statusExpiry .MenuWrapper .Menu .dropdown-menu {
+    top: 100%;
+    right:auto;
+    left:0;
+}
