--- a/webapp/channels/src/sass/responsive/_mobile.scss
+++ b/webapp/channels/src/sass/responsive/_mobile.scss
@@ -1550,8 +1550,8 @@
         .MenuWrapper {
             .Menu {
                 .dropdown-menu {
-                    top: 100%;
-                    right: 5%;
+                    top: 35%;
+                    right: 20%;
                     left: unset;
                 }
             }
